--- a/youtube.html
+++ b/youtube.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="estilosYouTube_v1.css">
+    <link rel="stylesheet" href="youtube.css">
     <title>Plantilla YouTube</title>
 </head>
 <body>
